examples/type_system/failing/61_strict_generic_unresolved_boundary.flx
// E425: strict mode rejects unresolved generic runtime boundary checks.
public fn id<T>(x: T) -> T {
    x
}

fn main() -> Unit {
    id(1)
    None
}
